<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="1"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/loan_amount_prompt" />

        <EditText
            android:id="@+id/loan_amount"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">

        </EditText>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/interest_rate_prompt" />

        <EditText
            android:id="@+id/interest_rate"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/loan_period_prompt" />

        <EditText
            android:id="@+id/loan_period"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </TableRow>

    <TableRow>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:onClick="showLoanPayments"
            android:text="@string/loan_button_text" />
    </TableRow>

    <TableRow android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/monthly_payment_prompt" />

        <TextView
            android:id="@+id/monthly_payment_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="#1d0ee7" />
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/total_payments_prompt" />

        <TextView
            android:id="@+id/total_payments_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="#1d0ee7" />
    </TableRow>
</TableLayout>
